ARM: dts: msm: Add support for CPU clocks for MSM8976
Move away from dummy cpu clocks and add the real cpu clock support. Also
modify the cpufreq table, add the CCI mapping for the clusters.

Change-Id: Ic5d72a6f9f711de97191920f633c876f5c989478
Signed-off-by: Taniya Das <tdas@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8976-pm.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8976-pm.dtsi
@@ -638,15 +638,15 @@
 		clock-names = "cpu0_clk", "cpu1_clk", "cpu2_clk",
 				"cpu3_clk", "cpu4_clk", "cpu5_clk",
 				"cpu6_clk", "cpu7_clk", "l2_clk";
-		clocks = <&clock_cpu clk_a53ssmux_bc>,
-			 <&clock_cpu clk_a53ssmux_bc>,
-			 <&clock_cpu clk_a53ssmux_bc>,
-			 <&clock_cpu clk_a53ssmux_bc>,
-			 <&clock_cpu clk_a53ssmux_lc>,
-			 <&clock_cpu clk_a53ssmux_lc>,
-			 <&clock_cpu clk_a53ssmux_lc>,
-			 <&clock_cpu clk_a53ssmux_lc>,
-			 <&clock_cpu clk_a53ssmux_cci>;
+		clocks = <&clock_cpu clk_a53_clk>,
+			 <&clock_cpu clk_a53_clk>,
+			 <&clock_cpu clk_a53_clk>,
+			 <&clock_cpu clk_a53_clk>,
+			 <&clock_cpu clk_a72_clk>,
+			 <&clock_cpu clk_a72_clk>,
+			 <&clock_cpu clk_a72_clk>,
+			 <&clock_cpu clk_a72_clk>,
+			 <&clock_cpu clk_cci_clk>;
 
 		qcom,tz-flushes-cache;
 
