--- a/arch/arm/boot/dts/qcom/msm8952-mdss-panels.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8952-mdss-panels.dtsi
@@ -13,6 +13,8 @@
 #include "dsi-panel-truly-1080p-video.dtsi"
 #include "dsi-panel-truly-1080p-cmd.dtsi"
 #include "dsi-panel-otm1906c-1080p-cmd.dtsi"
+#include "dsi-panel-sim-video.dtsi"
+#include "dsi-panel-sim-cmd.dtsi"
 
 &soc {
 	dsi_panel_pwr_supply: dsi_panel_pwr_supply {
