--- a/arch/arm/boot/dts/qcom/msm8952.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8952.dtsi
@@ -1187,12 +1187,13 @@
 
 	sdhc_1: sdhci@7824000 {
 		compatible = "qcom,sdhci-msm";
-		reg = <0x7824900 0x11c>, <0x7824000 0x800>;
+		reg = <0x7824900 0x500>, <0x7824000 0x800>;
 		reg-names = "hc_mem", "core_mem";
 
 		interrupts = <0 123 0>, <0 138 0>;
 		interrupt-names = "hc_irq", "pwr_irq";
 
+		sdhc-msm-crypto = <&sdcc1_ice>;
 		qcom,bus-width = <8>;
 
 		qcom,qos-planes = <3>;
@@ -1219,10 +1220,12 @@
 			100000000 200000000 400000000 4294967295>;
 
 		clocks = <&clock_gcc clk_gcc_sdcc1_ahb_clk>,
-			 <&clock_gcc clk_gcc_sdcc1_apps_clk>;
-		clock-names = "iface_clk", "core_clk";
+			 <&clock_gcc clk_gcc_sdcc1_apps_clk>,
+			 <&clock_gcc clk_gcc_sdcc1_ice_core_clk>;
+		clock-names = "iface_clk", "core_clk", "ice_core_clk";
 
 		qcom,clk-rates = <400000 25000000 50000000 100000000 192000000 384000000>;
+		qcom,ice-clk-rates = <200000000>;
 		qcom,bus-speed-mode = "HS400_1p8v", "HS200_1p8v", "DDR_1p8v";
 		status = "disabled";
 	};
