dwc3-msm: Turn on 1.8V LDO before turning on 3.3V LDO
commit c3bb79fa4 (dwc3-msm: Remove pull downs from D+
and D- lines upon cable connect) directly turns on 3.3V
analog voltage rail without turning on 1.8V analog voltage
rail first. This can cause damage to the HW circuitry.

Change-Id: I536b39b4ef8e36e5923da4f6b84db92931ffd86b
Signed-off-by: Hemant Kumar <hemantk@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8994.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8994.dtsi
@@ -1522,6 +1522,7 @@
 
 		USB3_GDSC-supply = <&gdsc_usb30>;
 		vdda33-supply = <&pm8994_l24>;
+		vdda18-supply = <&pm8994_l6>;
 		vbus_dwc3-supply = <&smbcharger_charger_otg>;
 		qcom,dwc-usb3-msm-tx-fifo-size = <29696>;
 		qcom,dwc-usb3-msm-qdss-tx-fifo-size = <8192>;
