--- a/arch/arm/boot/dts/qcom/mdm9640.dtsi
+++ b/arch/arm/boot/dts/qcom/mdm9640.dtsi
@@ -880,6 +880,7 @@
 				"pmic_id_irq";
 		USB3_GDSC-supply = <&gdsc_usb30>;
 		vdda33-supply = <&pmd9635_l10>;
+		vdda18-supply = <&pmd9635_l8>;
 		qcom,usb-dbm = <&dbm_1p5>;
 
 		qcom,msm-bus,name = "usb3";
