--- a/arch/arm/boot/dts/qcom/msm8974.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8974.dtsi
@@ -1575,6 +1575,7 @@
 
 		vbus_dwc3-supply = <&pm8941_mvs1>;
 		vdda33-supply = <&pm8941_l24>;
+		vdda18-supply = <&pm8941_l6>;
 		qcom,misc-ref = <&pm8941_misc>;
 		dwc_usb3-adc_tm = <&pm8941_adc_tm>;
 		qcom,dwc-usb3-msm-tx-fifo-size = <29696>;
