--- a/arch/arm/boot/dts/qcom/msm8992.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8992.dtsi
@@ -2693,6 +2693,7 @@
 
 		USB3_GDSC-supply = <&gdsc_usb30>;
 		vdda33-supply = <&pm8994_l24>;
+		vdda18-supply = <&pm8994_l6>;
 		vbus_dwc3-supply = <&smbcharger_charger_otg>;
 		qcom,dwc-usb3-msm-tx-fifo-size = <29696>;
 		qcom,dwc-usb3-msm-qdss-tx-fifo-size = <8192>;
