ASoC: wcd-mbhc: Refactor WCD MBHC driver
Refactor WCD MBHC driver so that various wcd
codecs can use the common functionality provided
by the wcd mbhc driver and any codec specific
functionality will be handled by the codec driver.

Change-Id: I9a4a424cd022f7aa08009e5b30b8353fa8784ef9
Signed-off-by: Phani Kumar Uppalapati <phaniu@codeaurora.org>

--- a/sound/soc/codecs/Makefile
+++ b/sound/soc/codecs/Makefile
@@ -73,7 +73,7 @@ snd-soc-wcd9330-objs := wcd9330.o wcd9330-tables.o wcdcal-hwdep.o
 snd-soc-wcd9335-objs := wcd9335.o wcd9xxx-common-v2.o wcd9xxx-resmgr-v2.o
 snd-soc-wcd9xxx-objs := wcd9xxx-resmgr.o wcd9xxx-mbhc.o wcd9xxx-common.o
 snd-soc-msm8x10-wcd-objs := msm8x10-wcd.o msm8x10-wcd-tables.o wcd9xxx-common.o
-snd-soc-msm8x16-wcd-objs := msm8x16-wcd.o msm8x16-wcd-tables.o wcd-mbhc-v2.o
+snd-soc-msm8x16-wcd-objs := msm8x16-wcd.o msm8x16-wcd-tables.o
 snd-soc-msm8x16-wcd-objs += wcd9xxx-common.o wcd9xxx-resmgr.o wcd9xxx-mbhc.o
 snd-soc-msm8x16-wcd-objs += wcd9306.o wcd9306-tables.o
 snd-soc-msm8x16-wcd-objs += wcd9330.o wcd9330-tables.o wcdcal-hwdep.o
@@ -81,12 +81,13 @@ snd-soc-msm8x16-wcd-objs += wcd9335.o wcd9xxx-common-v2.o wcd9xxx-resmgr-v2.o
 snd-soc-msm8x16-wcd-objs += wcd_cpe_services.o wcd_cpe_core.o
 audio-ext-clock-objs := audio-ext-clk.o
 snd-soc-wcd-cpe-objs := wcd_cpe_services.o wcd_cpe_core.o
-snd-soc-msm8909-wcd-objs := msm8x16-wcd.o msm8x16-wcd-tables.o wcd-mbhc-v2.o
+snd-soc-msm8909-wcd-objs := msm8x16-wcd.o msm8x16-wcd-tables.o
 snd-soc-msm8909-wcd-objs += wcd9xxx-common.o wcd9xxx-resmgr.o wcd9xxx-mbhc.o
 snd-soc-msm8909-wcd-objs += wcd9306.o wcd9306-tables.o wcdcal-hwdep.o
 snd-soc-wsa881x-analog-objs := wsa881x-analog.o wsa881x-tables-analog.o
 snd-soc-wsa881x-analog-objs += wsa881x-regmap-analog.o wsa881x-irq.o
 snd-soc-wsa881x-objs := wsa881x.o wsa881x-tables.o wsa881x-regmap.o
+snd-soc-wcd-mbhc-objs := wcd-mbhc-v2.o
 snd-soc-wl1273-objs := wl1273.o
 snd-soc-wm-adsp-objs := wm_adsp.o
 snd-soc-wm0010-objs := wm0010.o
@@ -224,6 +225,7 @@ obj-$(CONFIG_SND_SOC_WCD9335)	+= snd-soc-wcd9335.o
 obj-$(CONFIG_AUDIO_EXT_CLK)	+= audio-ext-clock.o
 obj-$(CONFIG_SND_SOC_WCD9XXX)   += snd-soc-wcd9xxx.o
 obj-$(CONFIG_SND_SOC_MSM8X16_WCD)	+= snd-soc-msm8x16-wcd.o msm8916-wcd-irq.o
+obj-$(CONFIG_SND_SOC_WCD_MBHC)  += snd-soc-wcd-mbhc.o
 obj-$(CONFIG_SND_SOC_WCD_CPE) += snd-soc-wcd-cpe.o
 obj-$(CONFIG_SND_SOC_MSM8909_WCD)	+= snd-soc-msm8909-wcd.o msm8916-wcd-irq.o
 obj-$(CONFIG_SND_SOC_WSA881X)	+= snd-soc-wsa881x-analog.o
