--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -399,6 +399,10 @@ config AUDIO_EXT_CLK
 	tristate
 	default y if SND_SOC_WCD9335=y
 
+config SND_SOC_WCD_MBHC
+	tristate
+	default y if SND_SOC_MSM8909_WCD=y || SND_SOC_MSM8X16_WCD=y
+
 config SND_SOC_WL1273
 	tristate
 
