--- a/arch/arm/boot/dts/qcom/msm8952-mdss.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8952-mdss.dtsi
@@ -168,6 +168,8 @@
 			<&clock_gcc clk_gcc_mdss_axi_clk>;
 		clock-names = "mdp_core_clk", "iface_clk", "bus_clk";
 
+		qcom,mmss-ulp-clamp-ctrl-offset = <0x20>;
+		qcom,mmss-phyreset-ctrl-offset = <0x24>;
 		qcom,timing-db-mode;
 
 		qcom,core-supply-entries {
