--- a/arch/arm/boot/dts/qcom/msm8952.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8952.dtsi
@@ -257,12 +257,27 @@
 		qcom,active-only;
 		qcom,bw-tbl =
 			<  1525 /*  100   MHz */ >,
-			<  2930 /*  192   MHz */ >,	/* SVS 	 */
+			<  2929 /*  192   MHz */ >,	/* SVS 	 */
 			<  3955 /*  259.2 MHz */ >,
 			<  5346 /*  350.4 MHz */ >,	/* SVS+  */
-			<  5713 /*  374.4 MHz */ >,	/* NOM 	 */
+			<  5712 /*  374.4 MHz */ >,	/* NOM 	 */
 			<  6152 /*  403.2 MHz */ >,	/* NOM+  */
-			<  7032 /*  460.8 MHz */ >;	/* TURBO */
+			<  7031 /*  460.8 MHz */ >;	/* TURBO */
+	};
+
+	mincpubw: qcom,mincpubw {
+		compatible = "qcom,devbw";
+		governor = "cpufreq";
+		qcom,src-dst-ports = <1 512>;
+		qcom,active-only;
+		qcom,bw-tbl =
+			<  1525 /*  100   MHz */ >,
+			<  2929 /*  192   MHz */ >,     /* SVS   */
+			<  3955 /*  259.2 MHz */ >,
+			<  5346 /*  350.4 MHz */ >,     /* SVS+  */
+			<  5712 /*  374.4 MHz */ >,     /* NOM   */
+			<  6152 /*  403.2 MHz */ >,     /* NOM+  */
+			<  7031 /*  460.8 MHz */ >;     /* TURBO */
 	};
 
 	qcom,cpu-bwmon {
@@ -278,17 +293,27 @@
 		cpubw-cpufreq {
 		target-dev = <&cpubw>;
 		cpu-to-dev-map-0 =
-			<  400000  2930 >,	/* SVS   */
+			<  400000  2929 >,	/* SVS   */
 			< 1094400  5346 >,	/* SVS+  */
-			< 1344000  5713 >,	/* NOM   */
+			< 1344000  5712 >,	/* NOM   */
 			< 1440000  6152 >,	/* NOM+  */
-			< 1516800  7032 >;	/* TURBO */
+			< 1516800  7031 >;	/* TURBO */
 		cpu-to-dev-map-4 =
-			<  400000  2930 >,	/* SVS   */
+			<  400000  2929 >,	/* SVS   */
 			<  800000  5346 >,	/* SVS+  */
-			<  998400  5713 >,	/* NOM   */
+			<  998400  5712 >,	/* NOM   */
 			< 1094400  6152 >,	/* NOM+  */
-			< 1209600  7032 >;	/* TURBO */
+			< 1209600  7031 >;	/* TURBO */
+		};
+
+		mincpubw-cpufreq {
+			target-dev = <&mincpubw>;
+			cpu-to-dev-map-0 =
+				< 1094400 2929 >,
+				< 1516800 5346 >;
+			cpu-to-dev-map-4 =
+				<  998400 2929 >,
+				< 1209600 5346 >;
 		};
 
 		cci-cpufreq {
