ARM: dts: msm: add SVS+ venus clock frequency for 1080p 45fps
Added SVS+ venus clock frequency for 1080p 45fps clips in
clock frequency table.
This allows DCVS to toggle between nominal and SVS+ venus
clock frequencies.

Change-Id: I60599043592ad4649654c7d548c03fc6e8cdbe8c
Signed-off-by: Srinu Gorle <sgorle@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8952.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8952.dtsi
@@ -1481,6 +1481,7 @@
 		qcom,load-freq-tbl =
 			<489600 266670000 0x01000414>, /* Encoder turbo (wfd) */
 			<489600 228570000 0xf0fcfff>, /* Legacy decoder 1080p 60fps  */
+			<367200 180000000 0xf0fcfff>, /* Legacy decoder 1080p 45fps  */
 			<244800 180000000 0x00030000>, /* VC1 decoder 1080p 30fps  */
 			<244800 180000000 0x01000414>, /* Legacy encoder 1080p 30fps   */
 			<244800 133330000 0xf0ccfff>, /* decoder 1080p 30fps   */
