defconfig: msm: Disable kmemleak by default
Kmemleak uses additional memory by storing
stack traces which has seen to cause memory killer
to kick in often since it occupies a lot of memory.

Disable it by default at bootup.

Change-Id: I53fccc8faa2bdbd5dc239d886a92a825069f8585
Signed-off-by: Vignesh Radhakrishnan <vigneshr@codeaurora.org>

--- a/arch/arm64/configs/msm_defconfig
+++ b/arch/arm64/configs/msm_defconfig
@@ -563,6 +563,7 @@ CONFIG_DEBUG_OBJECTS_WORK=y
 CONFIG_DEBUG_OBJECTS_RCU_HEAD=y
 CONFIG_DEBUG_OBJECTS_PERCPU_COUNTER=y
 CONFIG_DEBUG_KMEMLEAK=y
+CONFIG_DEBUG_KMEMLEAK_DEFAULT_OFF=y
 CONFIG_DEBUG_KMEMLEAK_EARLY_LOG_SIZE=4000
 CONFIG_DEBUG_TASK_STACK_SCAN_OFF=y
 CONFIG_DEBUG_MODULE_SCAN_OFF=y
