--- a/arch/arm/boot/dts/qcom/msm8952-ion.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8952-ion.dtsi
@@ -27,45 +27,26 @@
 		};
 
 		qcom,ion-heap@8 { /* CP_MM HEAP */
-			compatible = "qcom,msm-ion-reserve";
 			reg = <8>;
-			qcom,heap-align = <0x1000>;
-			linux,contiguous-region = <&secure_mem>;
+			memory-region = <&secure_mem>;
 			qcom,ion-heap-type = "SECURE_DMA";
 		};
 
 		qcom,ion-heap@27 { /* QSEECOM HEAP */
-			compatible = "qcom,msm-ion-reserve";
 			reg = <27>;
-			linux,contiguous-region = <&qseecom_mem>;
+			memory-region = <&qseecom_mem>;
 			qcom,ion-heap-type = "DMA";
 		};
 
 		qcom,ion-heap@28 { /* AUDIO HEAP */
-			compatible = "qcom,msm-ion-reserve";
 			reg = <28>;
-			linux,contiguous-region = <&audio_mem>;
-			qcom,ion-heap-type = "DMA";
-		};
-
-		qcom,ion-heap@23 { /* OTHER PIL HEAP */
-			compatible = "qcom,msm-ion-reserve";
-			reg = <23>;
-			linux,contiguous-region = <&reloc_mem>;
-			qcom,ion-heap-type = "DMA";
-		};
-
-		qcom,ion-heap@26 { /* MODEM HEAP */
-			compatible = "qcom,msm-ion-reserve";
-			reg = <26>;
-			linux,contiguous-region = <&modem_mem>;
+			memory-region = <&audio_mem>;
 			qcom,ion-heap-type = "DMA";
 		};
 
 		qcom,ion-heap@22 {
-			compatible = "qcom,msm-ion-reserve";
 			reg = <22>;
-			linux,contiguous-region = <&adsp_mem>;
+			memory-region = <&adsp_mem>;
 			qcom,ion-heap-type = "DMA";
 		};
 	};
