defconfig: msm: Enable OPP and APSS_CORE_EA configs
Porting EA config changes from msm-3.10. This requires PM_OPP
config to be enabled as well.

Change-Id: Ie3a4291a445f6ae682eb8086036805d8abe1bef4
Signed-off-by: Archana Sathyakumar <asathyak@codeaurora.org>

--- a/arch/arm64/configs/msm-perf_defconfig
+++ b/arch/arm64/configs/msm-perf_defconfig
@@ -514,3 +514,5 @@ CONFIG_DEVFREQ_SPDM=y
 CONFIG_SPDM_SCM=y
 CONFIG_USB_GADGET_STORAGE_NUM_BUFFERS=4
 CONFIG_USB_GADGET_VBUS_DRAW=500
+CONFIG_PM_OPP=y
+CONFIG_APSS_CORE_EA=y
