--- a/arch/arm/boot/dts/qcom/mdm9640.dtsi
+++ b/arch/arm/boot/dts/qcom/mdm9640.dtsi
@@ -298,6 +298,21 @@
 		qcom,bus-vector-names = "MIN", "SVS", "NOMINAL", "TURBO";
 	};
 
+	mhi_dev@87000 {
+		compatible = "qcom,msm-mhi-dev";
+		reg = <0x87000 0x1000>,
+		      <0x7962000 0x1>,
+		      <0x7962080 0x1>;
+		reg-names = "mhi_mmio_base", "ipa_uc_mbox_crdb",
+			    "ipa_uc_mbox_erdb";
+		interrupts = <0 50 0>;
+		interrupt-names = "mhi-device-inta";
+		qcom,mhi-ifc-id = <0x030117cb>;
+		qcom,mhi-local-pa-base = <0x40000000>;
+		qcom,mhi-ep-msi = <1>;
+		qcom,mhi-version = <0x1000000>;
+	};
+
 	qcom,rmnet-ipa {
 		compatible = "qcom,rmnet-ipa";
 	};
