--- a/arch/arm64/configs/msm-perf_defconfig
+++ b/arch/arm64/configs/msm-perf_defconfig
@@ -521,6 +521,7 @@ CONFIG_MSM_PIL_SSR_GENERIC=y
 CONFIG_MSM_PIL_MSS_QDSP6V5=y
 CONFIG_MSM_OCMEM=y
 CONFIG_MSM_OCMEM_LOCAL_POWER_CTRL=y
+CONFIG_MSM_BOOT_STATS=y
 CONFIG_MSM_SCM=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 CONFIG_EXT2_FS=y
