--- a/arch/arm64/configs/msm_defconfig
+++ b/arch/arm64/configs/msm_defconfig
@@ -534,6 +534,7 @@ CONFIG_MSM_OCMEM=y
 CONFIG_MSM_OCMEM_LOCAL_POWER_CTRL=y
 CONFIG_MSM_OCMEM_DEBUG=y
 CONFIG_MSM_OCMEM_NONSECURE=y
+CONFIG_MSM_BOOT_STATS=y
 CONFIG_MSM_SCM=y
 CONFIG_MSM_XPU_ERR_FATAL=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
