--- a/arch/arm/boot/dts/qcom/msm8976.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8976.dtsi
@@ -17,7 +17,7 @@
 / {
 	model = "Qualcomm Technologies, Inc. MSM 8976";
 	compatible = "qcom,msm8976";
-	qcom,msm-id = <266 0x0>; /* Needs update */
+	qcom,msm-id = <278 0x0>;
 	interrupt-parent = <&intc>;
 
 	aliases {
