--- a/arch/arm/boot/dts/qcom/Makefile
+++ b/arch/arm/boot/dts/qcom/Makefile
@@ -125,6 +125,8 @@ dtb-$(CONFIG_ARCH_MSM8916) += msm8916-sim.dtb \
 	msm8976-sim.dtb \
 	msm8976-rumi.dtb \
 	msm8976-qrd-skun.dtb \
+	msm8976-cdp.dtb \
+	msm8976-mtp.dtb \
 	msm8929-cdp.dtb \
 	msm8929-mtp.dtb \
 	msm8929-mtp-smb1360.dtb \
