ARM: dts: Convert all pinctrl nodes of msm8952 for 3.18 kernel
Convert all pinctrl nodes of msm8952 in accordance to the new
binding guidelines for pingroups and mux settings in 3.18 kernel.

The guidelines are mentioned in -
Documentation/devicetree/bindings/pinctrl/pinctrl-bindings.txt

Change-Id: I13fa3be3f89767e715918699468fe30478de97d9
Signed-off-by: Prasad Sodagudi <psodagud@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8952-qrd-skum.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8952-qrd-skum.dtsi
@@ -167,10 +167,29 @@
 	};
 };
 
-&tlmm_pinmux {
+&msm_gpio {
 	tlmm_gpio_key {
-		qcom,pins = <&gp 85>, <&gp 93>;
-		qcom,num-grp-pins = <2>;
+		gpio_key_active: gpio_key_active {
+			mux {
+				pins = "gpio85", "gpio93";
+				function = "gpio";
+			};
+
+			config {
+				pins = "gpio85", "gpios93";
+			};
+		};
+
+		gpio_key_suspend: gpio_key_suspend {
+			mux {
+				pins = "gpio85", "gpio93";
+				function = "gpio";
+			};
+
+			config {
+				pins = "gpio85", "gpios93";
+			};
+		};
 	};
 };
 
@@ -201,14 +220,48 @@
 	qcom,mdss-pref-prim-intf = "dsi";
 };
 
-&pmx_mdss {
-	qcom,num-grp-pins = <1>;
-	qcom,pins = <&gp 0>;
-};
+&msm_gpio {
+	pmx_mdss {
+		mdss_dsi_active: mdss_dsi_active {
+			mux {
+				pins = "gpio0";
+			};
+			config {
+				pins = "gpio0";
+			};
+		};
 
-&pmx_mdss_te {
-	qcom,num-grp-pins = <1>;
-	qcom,pins = <&gp 24>;
+		mdss_dsi_suspend: mdss_dsi_suspend {
+			mux {
+				pins = "gpio0";
+			};
+			config {
+				pins = "gpio0";
+			};
+		};
+
+	};
+
+	pmx_mdss_te {
+		mdss_te_active: mdss_te_active {
+			mux {
+				qcom,pins = "gpio24";
+			};
+			config {
+				qcom,pins = "gpio24";
+			};
+		};
+
+		mdss_te_suspend: mdss_te_suspend {
+			mux {
+				qcom,pins = "gpio24";
+			};
+			config {
+				qcom,pins = "gpio24";
+			};
+		};
+
+	};
 };
 
 &mdss_dsi0 {
