--- a/arch/arm/boot/dts/qcom/msm8952-cdp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8952-cdp.dtsi
@@ -183,10 +183,29 @@
 	};
 };
 
-&tlmm_pinmux {
+&msm_gpio {
 	tlmm_gpio_key {
-		qcom,pins = <&gp 85>, <&gp 86>, <&gp 87>, <&gp 88>;
-		qcom,num-grp-pins = <4>;
+		gpio_key_active: gpio_key_active {
+			mux {
+				pins = "gpio85", "gpio86", "gpio87", "gpio88";
+				function = "gpio";
+			};
+
+			config {
+				pins = "gpio85", "gpio86", "gpio87", "gpio88";
+			};
+		};
+
+		gpio_key_suspend: gpio_key_suspend {
+			mux {
+				pins = "gpio85", "gpio86", "gpio87", "gpio88";
+				function = "gpio";
+			};
+
+			config {
+				pins = "gpio85", "gpio86", "gpio87", "gpio88";
+			};
+		};
 	};
 };
 
@@ -285,14 +304,47 @@
 	qcom,panel-supply-entries = <&dsi_panel_pwr_supply>;
 };
 
-&pmx_mdss {
-	qcom,num-grp-pins = <3>;
-	qcom,pins = <&gp 90>, <&gp 0>, <&gp 91>;
-};
+&msm_gpio {
+	pmx_mdss {
+		mdss_dsi_active: mdss_dsi_active {
+			mux {
+				pins = "gpio90", "gpio0", "gpio91";
+			};
 
-&pmx_mdss_te {
-	qcom,num-grp-pins = <1>;
-	qcom,pins = <&gp 24>;
+			config {
+				pins = "gpio90", "gpio0", "gpio91";
+			};
+		};
+		mdss_dsi_suspend: mdss_dsi_suspend {
+			mux {
+				pins = "gpio90", "gpio0", "gpio91";
+			};
+
+			config {
+				pins = "gpio90", "gpio0", "gpio91";
+			};
+		};
+	};
+
+	pmx_mdss_te {
+		mdss_te_active: mdss_te_active {
+			mux {
+				pins = "gpio24";
+			};
+			config {
+				pins = "gpio24";
+			};
+		};
+
+		mdss_te_suspend: mdss_te_suspend {
+			mux {
+				pins = "gpio24";
+			};
+			config {
+				pins = "gpio24";
+			};
+		};
+	};
 };
 
 &mdss_dsi0 {
