ARM: dts: msm: specify delay between consecutive writes to SYNC
For PMi8950 WLED, add an optional DT property - qcom,cons-sync-
write-delay-us to specify the delay duration between two
consecutive writes to SYNC register of WLED SINK block.

Change-Id: I23b5b798d6e02b874888d96b99374a2818653af7
Signed-off-by: Abinaya P <abinayap@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
@@ -511,6 +511,7 @@
 			qcom,ibb-pwrup-dly = <8>;
 			qcom,led-strings-list = [00 01];
 			qcom,en-ext-pfet-sc-pro;
+			qcom,cons-sync-write-delay-us = <1000>;
 		};
 
 		qcom,leds@d300 {
