ARM: dts: msm: Enable reset-on-bam-disconnect flag for msm8976
Enable reset-on-bam-disconnect flag for msm8976 so that USB BAM reset
is performed during disconnect processing. Otherwise EP flush issues
will be seen.

Change-Id: I48ee2fcfddbdea302fb354603451b1a4ed6c1f54
Signed-off-by: Sujeet Kumar <ksujeet@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8976.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8976.dtsi
@@ -929,6 +929,7 @@
 			qcom,src-bam-pipe-index = <1>;
 			qcom,data-fifo-size = <0x8000>;
 			qcom,descriptor-fifo-size = <0x2000>;
+			qcom,reset-bam-on-disconnect;
 		};
 
 		qcom,pipe1 {
@@ -942,6 +943,7 @@
 			qcom,dst-bam-pipe-index = <0>;
 			qcom,data-fifo-size = <0x8000>;
 			qcom,descriptor-fifo-size = <0x2000>;
+			qcom,reset-bam-on-disconnect;
 		};
 
 		qcom,pipe2 {
@@ -959,6 +961,7 @@
 			qcom,data-fifo-size = <0xe00>;
 			qcom,descriptor-fifo-offset = <0xe00>;
 			qcom,descriptor-fifo-size = <0x200>;
+			qcom,reset-bam-on-disconnect;
 		};
 	};
 
