ARM: dts: msm: Fix qcrypto registration for msm8952
Add "qcom,ce-hw-shared;" to qcrypto DT node to fix SPS registration
failure.  Add aes-ccm algorithm to be exposed by qcrypto

Change-Id: Ic43e44cb4dd4e7c3cb86a10504b180e2a5d9d2df
Signed-off-by: William Clark <wclark@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8952.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8952.dtsi
@@ -1399,6 +1399,7 @@
 		qcom,bam-pipe-pair = <2>;
 		qcom,ce-hw-instance = <0>;
 		qcom,ce-device = <0>;
+		qcom,ce-hw-shared;
 		qcom,msm-bus,name = "qcrypto-noc";
 		qcom,msm-bus,num-cases = <2>;
 		qcom,msm-bus,num-paths = <1>;
@@ -1413,6 +1414,7 @@
 				"iface_clk", "bus_clk";
 		qcom,use-sw-aes-cbc-ecb-ctr-algo;
 		qcom,use-sw-aes-xts-algo;
+		qcom,use-sw-aes-ccm-algo;
 		qcom,use-sw-ahash-algo;
 		qcom,ce-opp-freq = <100000000>;
 	};
