ARM: dts: msm: add initial display support for MSM8976 SKUN
MSM8976 SKUN uses otm1906c 1080p display. Add panel support,
power supply and pinctrl for SKUN display.

Change-Id: I5974f536672377a0083feb6f7e756582d57be98d
Signed-off-by: Ray Zhang <rayz@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8976-qrd-skun.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8976-qrd-skun.dtsi
@@ -128,3 +128,42 @@
 	/delete-property/ bias-pull-up;
 	bias-disable;
 };
+
+&mdss_mdp {
+	qcom,mdss-pref-prim-intf = "dsi";
+};
+
+&dsi_otm1906c_1080p_cmd {
+	qcom,panel-supply-entries = <&dsi_panel_pwr_supply>;
+	qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_wled";
+	qcom,mdss-dsi-bl-min-level = <1>;
+	qcom,mdss-dsi-bl-max-level = <4095>;
+};
+
+&pmx_mdss {
+	qcom,num-grp-pins = <1>;
+	qcom,pins = <&gp 25>;
+};
+
+&pmx_mdss_te {
+	qcom,num-grp-pins = <1>;
+	qcom,pins = <&gp 24>;
+};
+
+&mdss_dsi0 {
+	pinctrl-names = "mdss_default", "mdss_sleep";
+	pinctrl-0 = <&mdss_dsi_active &mdss_te_active>;
+	pinctrl-1 = <&mdss_dsi_suspend &mdss_te_suspend>;
+	qcom,dsi-pref-prim-pan = <&dsi_otm1906c_1080p_cmd>;
+
+	qcom,platform-reset-gpio = <&msm_gpio 25 0>;
+};
+
+&mdss_dsi1 {
+	qcom,dsi-pref-prim-pan = <&dsi_otm1906c_1080p_cmd>;
+};
+
+&labibb {
+	status = "ok";
+	qpnp,qpnp-labibb-mode = "lcd";
+};
