--- a/arch/arm/boot/dts/qcom/msm8976-mdss-panels.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8976-mdss-panels.dtsi
@@ -13,6 +13,7 @@
 #include "dsi-panel-sim-video.dtsi"
 #include "dsi-panel-sim-cmd.dtsi"
 #include "dsi-panel-nt35597-dualmipi-wqxga-video.dtsi"
+#include "dsi-panel-otm1906c-1080p-cmd.dtsi"
 
 &soc {
 	dsi_panel_pwr_supply: dsi_panel_pwr_supply {
