ARM: dts: msm: Add actuator for msm8952 camera
Add actuator node for front camera on 8952.

Change-Id: I866c200c3d843c14832a48e3fb75cff8eef57a72
Signed-off-by: Mayank Parashar <mayankp@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8952-camera-sensor-mtp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8952-camera-sensor-mtp.dtsi
@@ -35,6 +35,18 @@
 		qcom,cam-vreg-op-mode = <80000>;
 	};
 
+	actuator1: qcom,actuator@1 {
+		cell-index = <1>;
+		reg = <0x1>;
+		compatible = "qcom,actuator";
+		qcom,cci-master = <0>;
+		cam_vaf-supply = <&pm8950_l17>;
+		qcom,cam-vreg-name = "cam_vaf";
+		qcom,cam-vreg-min-voltage = <2850000>;
+		qcom,cam-vreg-max-voltage = <2850000>;
+		qcom,cam-vreg-op-mode = <80000>;
+	};
+
 	eeprom0: qcom,eeprom@0 {
 		cell-index = <0>;
 		reg = <0x0>;
@@ -148,6 +160,7 @@
 		qcom,csiphy-sd-index = <1>;
 		qcom,csid-sd-index = <1>;
 		qcom,mount-angle = <90>;
+		qcom,actuator-src = <&actuator1>;
 		cam_vdig-supply = <&pm8950_l23>;
 		cam_vana-supply = <&pm8950_l22>;
 		cam_vio-supply = <&pm8950_l6>;
