ARM: dts: msm: Add device tree for FM on 8976
Add device tree support to enumerate FM drivers on 8976.

Change-Id: I895840956b2d328225819bfdf6e988dffc85593a
Signed-off-by: Venkateshwarlu Domakonda <vdomak@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8976.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8976.dtsi
@@ -1291,6 +1291,10 @@
 		};
 	};
 
+	qcom,iris-fm {
+		compatible = "qcom,iris_fm";
+	};
+
 	qcom,venus@1de0000 {
 		compatible = "qcom,pil-tz-generic";
 		reg = <0x1de0000 0x4000>;
