--- a/drivers/uio/Kconfig
+++ b/drivers/uio/Kconfig
@@ -182,4 +182,14 @@ config UIO_DFL
 	    opae-sdk/tools/libopaeuio/
 
 	  If you compile this as a module, it will be called uio_dfl.
+
+config UIO_MSM_SHAREDMEM
+	bool "MSM shared memory driver"
+	default n
+	help
+	  Provides the clients with their respective alloted shared memory
+	  addresses which are used as transport buffer.
+
+	  If you don't know what to do here, say N.
+
 endif
