defconfig: msm8996: Enable core_ctl module
Enable core_ctl module to dynamically online or offline CPUs based on
current system load.

Change-Id: Ic0398e01329d5e2fc0951f4e4ba70ae2811a7a3f
Signed-off-by: Junjie Wu <junjiew@codeaurora.org>

--- a/arch/arm64/configs/msm-perf_defconfig
+++ b/arch/arm64/configs/msm-perf_defconfig
@@ -510,6 +510,7 @@ CONFIG_CRYPTO_DEV_QCEDEV=y
 CONFIG_CRYPTO_DEV_OTA_CRYPTO=y
 CONFIG_CRYPTO_DEV_QCOM_ICE=y
 CONFIG_QMI_ENCDEC=y
+CONFIG_MSM_CORE_CTL_HELPER=y
 CONFIG_DEVFREQ_SPDM=y
 CONFIG_SPDM_SCM=y
 CONFIG_USB_GADGET_STORAGE_NUM_BUFFERS=4
