--- a/arch/arm64/configs/msm_defconfig
+++ b/arch/arm64/configs/msm_defconfig
@@ -550,6 +550,7 @@ CONFIG_PAGE_OWNER=y
 CONFIG_HW_RANDOM_MSM_LEGACY=y
 CONFIG_PAGE_OWNER=y
 CONFIG_MOBICORE_DRIVER=m
+CONFIG_MSM_CORE_CTL_HELPER=y
 CONFIG_DEVFREQ_SPDM=y
 CONFIG_SPDM_SCM=y
 CONFIG_USB_GADGET_STORAGE_NUM_BUFFERS=4
