ARM: dts: msm: Add venus firmware name for 8952 and 8956
Venus firmware name is different for 8952 and 8956.

Change-Id: Ifb06fd86d580ec1bc336bd82571961037055d448
Signed-off-by: Maheshwar Ajja <majja@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8976.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8976.dtsi
@@ -1345,6 +1345,7 @@
 		venus-supply = <&gdsc_venus>;
 		venus-core0-supply = <&gdsc_venus_core0>;
 		qcom,hfi = "venus";
+		qcom,firmware-name = "venus-v1";
 
 		clocks =
 			<&clock_gcc clk_gcc_venus0_vcodec0_clk>,
