--- a/arch/arm/boot/dts/qcom/msm8952.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8952.dtsi
@@ -1588,6 +1588,7 @@
 			<36000 133330000 0xf0fcfff>, /* decoder VGA 30 fps  */
 			<36000 133330000 0x01000414>; /* encoder VGA 30 fps   */
 		qcom,hfi = "venus";
+		qcom,firmware-name = "venus";
 		qcom,reg-presets = <0xe0020 0x05555556>,
 			<0xe0024 0x05555556>,
 			<0x80124 0x00000003>;
