--- a/arch/arm/boot/dts/qcom/msm8956.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8956.dtsi
@@ -1300,6 +1300,7 @@
 		venus-supply = <&gdsc_venus>;
 		venus-core0-supply = <&gdsc_venus_core0>;
 		qcom,hfi = "venus";
+		qcom,firmware-name = "venus-v1";
 
 		clocks =
 			<&clock_gcc clk_gcc_venus0_vcodec0_clk>,
