--- a/arch/arm/boot/dts/qcom/fsm9010.dtsi
+++ b/arch/arm/boot/dts/qcom/fsm9010.dtsi
@@ -182,6 +182,22 @@
 		qcom,sensor-id = <0 1 5>;
 	};
 
+	qcom,msm-thermal {
+		compatible = "qcom,msm-thermal";
+		qcom,sensor-id = <0>;
+		qcom,poll-ms = <250>;
+		qcom,therm-reset-temp = <110>;
+		qcom,disable-vdd-mx;
+		qcom,disable-vdd-rstr;
+		qcom,disable-sensor-info;
+		qcom,disable-ocr;
+		qcom,disable-psm;
+		qcom,disable-gfx-phase-ctrl;
+		qcom,disable-cx-phase-ctrl;
+		qcom,disable-core-control;
+		qcom,disable-freq-mitigation;
+	};
+
 	clock_gcc: qcom,gcc@fc400000 {
 		compatible = "qcom,gcc-fsm9010";
 		reg = <0xfc400000 0x4000>;
