ARM: dts: msm: specify I2C fast mode for eeprom on msm8996
Specify I2C fast modes on eeprom dt nodes on msm8996 to
increase eeprom I2C read speed.

Change-Id: Ie0fca357db612c08da2acbddffa63abe6aacedbe
Signed-off-by: Xu Han <hanxu@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8996-camera-sensor-cdp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-camera-sensor-cdp.dtsi
@@ -51,6 +51,7 @@
 		qcom,eeprom-name = "onsemi_cat24c32";
 		compatible = "qcom,eeprom";
 		qcom,slave-addr = <0xa0>;
+		qcom,i2c-freq-mode = <1>;
 		qcom,cci-master = <0>;
 		qcom,num-blocks = <1>;
 		qcom,page0 = <0 0 0 0 0 0>;
@@ -75,6 +76,7 @@
 		qcom,eeprom-name = "onsemi_cat24c16";
 		compatible = "qcom,eeprom";
 		qcom,slave-addr = <0xa0>;
+		qcom,i2c-freq-mode = <1>;
 		qcom,cci-master = <1>;
 		qcom,num-blocks = <7>;
 
