ARM: dts: msm: Modify the GFX TCU clock string for msm8976
Fix the error mentioning GFX TCU clock for msm8976.

Change-Id: I65c5b771a2eb97d4c9c627459557bf372a831cb2
Signed-off-by: Chintan Pandya <cpandya@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8976-iommu.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8976-iommu.dtsi
@@ -23,7 +23,7 @@
 		label = "gfx_iommu";
 		qcom,iommu-secure-id = <18>;
 		clocks = <&clock_gcc clk_gcc_smmu_cfg_clk>,
-			 <&clock_gcc clk_gcc_gfx_tcu_clk>;
+			 <&clock_gcc_gfx clk_gcc_gfx_tcu_clk>;
 		clock-names = "iface_clk", "core_clk";
 		status = "ok";
 
