Revert "ARM: dts: msm: Add l2ccc vctl for msm8952"
Remove cluster rail power control node from l2ccc node
and register address to trigger l2 SPM out of power collapse
as BUG_ON is hitting from kick_l2spm with msm8952_32.

This reverts commit 99e9f2fe006683d181c7de149a1786cb0b2525b2

Change-Id: Id2949ae4d56a501623d89e6f8ceb80e452b34ce2
Signed-off-by: Panwar Vivek <vpanwa@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8939-cpu.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8939-cpu.dtsi
@@ -133,14 +133,12 @@
 &soc {
 	l2ccc_0: clock-controller@b111000 {
 		compatible = "qcom,8916-l2ccc";
-		reg = <0x0b111000 0x1000>,
-		      <0x0b1d1208 0x4>;
+		reg = <0x0b111000 0x1000>;
 	};
 
 	l2ccc_1: clock-controller@b011000 {
 		compatible = "qcom,8916-l2ccc";
-		reg = <0x0b011000 0x1000>,
-		      <0x0b1d1208 0x4>;
+		reg = <0x0b011000 0x1000>;
 	};
 
 	acc0:clock-controller@b088000 {
