ARM: dts: msm: enable CPUSS LDO mode on MSM8996v2 platforms
Update the LDO functional and retention scaling equations for
MSM8996v2.x to match the latest known silicon characterization data.
Now that safe values have been identified, enable CPUSS LDO functional
and retention modes to reduce power consumption.

Change-Id: I992ed73a78b928a4d5c38f0fc6706e09b9a1e7d8
Signed-off-by: Osvaldo Banuelos <osvaldob@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8996-v1.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-v1.dtsi
@@ -62,6 +62,36 @@
 	regulator-always-on;
 };
 
+&apc0_pwrcl_vreg {
+	qcom,ldo-max-voltage = <783000>;
+};
+
+&apc1_vreg {
+	qcom,ldo-max-voltage = <780000>;
+};
+
+&kryo0_vreg {
+	qcom,vref-functional-step-voltage = <3919>;
+	qcom,vref-functional-min-voltage = <285420>;
+	qcom,vref-retention-step-voltage = <4554>;
+	qcom,vref-retention-min-voltage = <332000>;
+
+	kryo0_retention_vreg {
+		regulator-min-microvolt = <332000>;
+	};
+};
+
+&kryo1_vreg {
+	qcom,vref-functional-step-voltage = <3905>;
+	qcom,vref-functional-min-voltage = <284415>;
+	qcom,vref-retention-step-voltage = <4554>;
+	qcom,vref-retention-min-voltage = <332000>;
+
+	kryo1_retention_vreg {
+		regulator-min-microvolt = <332000>;
+	};
+};
+
 &venus_secure_pixel_cb {
 	status = "disabled";
 };
