defconfig: arm64: msm: Set CONFIG_USB_GADGET_VBUS_DRAW to 500
Set the Max VBUS power usage default value to 500, allowing the
devices to draw 500mA from USB.

Change-Id: I7eab4f6ed1ba711f49c86bb347ff0ebe1b2119cc
Signed-off-by: Azhar Shaikh <azhars@codeaurora.org>

--- a/arch/arm64/configs/msm-perf_defconfig
+++ b/arch/arm64/configs/msm-perf_defconfig
@@ -512,3 +512,4 @@ CONFIG_QMI_ENCDEC=y
 CONFIG_DEVFREQ_SPDM=y
 CONFIG_SPDM_SCM=y
 CONFIG_USB_GADGET_STORAGE_NUM_BUFFERS=4
+CONFIG_USB_GADGET_VBUS_DRAW=500
