--- a/arch/arm/boot/dts/qcom/dsi-panel-jdi-a216-fhd-video.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-jdi-a216-fhd-video.dtsi
@@ -33,20 +33,19 @@
 		qcom,mdss-dsi-v-top-border = <0>;
 		qcom,mdss-dsi-v-bottom-border = <0>;
 		qcom,mdss-dsi-bpp = <24>;
-		qcom,mdss-dsi-color-order = "rgb_swap_rgb";
+		qcom,mdss-dsi-color-order = "rgb_swap_bgr";
 		qcom,mdss-dsi-underflow-color = <0xff>;
 		qcom,mdss-dsi-border-color = <0>;
-		qcom,mdss-dsi-on-command = [15 01 00 00 0a 00 02 51 FF
+		qcom,mdss-dsi-on-command = [
+					15 01 00 00 0a 00 02 51 FF
 					15 01 00 00 0a 00 02 53 0C
 					15 01 00 00 0a 00 02 55 00
-					05 01 00 00 C8 00 01 11 /* sleep out */
+					05 01 00 00 78 00 01 11 /* sleep out */
 					05 01 00 00 28 00 01 29 /* display on */
-					29 01 00 00 0a 00 02 B0 04
-					29 01 00 00 0a 00 06 D0 10 93 BB 12 8E
 		];
 		qcom,mdss-dsi-off-command = [
-					05 01 00 00 32 00 02 28 00 /* display off */
-					05 01 00 00 78 00 02 10 00 /* enter sleep */];
+					05 01 00 00 14 00 02 28 00 /* display off */
+					05 01 00 00 3C 00 02 10 00 /* enter sleep */];
 		qcom,mdss-dsi-on-command-state = "dsi_hs_mode";
 		qcom,mdss-dsi-off-command-state = "dsi_hs_mode";
 		qcom,mdss-dsi-h-sync-pulse = <0>;
