ARM: dts: msm: configure touch panel to WQXGA for 8976
Touch controller is programmed for WQXGA resolution for 8976 CDP
and MTP. Hence, change the touch panel co-ordinates to support
WQXGA resolution.

Change-Id: I06f75407873c3ef61bd23849e656fd9623ff0135
Signed-off-by: Abinaya P <abinayap@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8976-cdp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8976-cdp.dtsi
@@ -33,8 +33,9 @@
 		synaptics,detect-device;
 		synaptics,device1 {
 			synaptics,package-id = <3528>;
+			synaptics,bypass-sensor-coords-check;
 			synaptics,display-coords = <0 0 1439 2559>;
-			synaptics,panel-coords = <0 0 1439 2703>;
+			synaptics,panel-coords = <0 0 1599 2703>;
 			synaptics,key-codes = <158 139 172 217>;
 		};
 	};
